# StoreApp

./: CMakeLists.txt  README.md  customer.cpp  customer.h  item.cpp  item.h  itemtransaction.cpp  itemtransaction.h  main.cpp  mainwindow.cpp  mainwindow.h  transaction.cpp  transaction.h  transinterface.cpp  transinterface.h
